--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 
     <hr>
 
-
     <section class="segment hero">
       <picture>
         <source srcset="img/hero/banner-md.jpg" media="(min-width: 426px) and (max-width: 768px)">
@@ -113,7 +112,6 @@
     <nav id="contact" class="internal-navigation"></nav>
     <h2 class="sub-heading">contact media</h2>
 
-
     <section class="contacts segment">
       <a href="https://github.com/hamiduabu" target="_blank" class="github">
         <span>
@@ -125,7 +123,6 @@
         </span>
       </a>
 
-
       <a href="https://www.linkedin.com/in/hamiduabu" target="_blank" class="linkedin">
         <span>
           <svg xmlns="http://www.w3.org/2000/svg" aria-label="LinkedIn" role="img" viewBox="0 0 512 512" fill="#fff">
@@ -136,7 +133,6 @@
           </svg>
         </span>
       </a>
-
 
       <a href="https://twitter.com/HamiduAbu1" target="_blank" class="twitter">
         <span>
@@ -172,13 +168,12 @@
       </a>
     </section>
 
-
     <footer class="segment footer">
       <p>
         <small>images &amp; icons used were obtained from
-          <a href="https://pixabay.com/">pixabay</a>,
-          <a href="https://commons.wikimedia.org">wikimedia commons</a> &amp;
-          <a href="https://github.com/edent/SuperTinyIcons">super tiny icons</a>
+          <a href="https://pixabay.com/" target="_blank">pixabay</a>,
+          <a href="https://commons.wikimedia.org" target="_blank">wikimedia commons</a> &amp;
+          <a href="https://github.com/edent/SuperTinyIcons" target="_blank">super tiny icons</a>
         </small>
       </p>
     </footer>
@@ -198,7 +193,6 @@
     </nav>
 
   </section>
-
 
 </body>
 
